fix banner editor toggle and layout bug

--- a/views/themes/banner_editor/assets/stylesheets/banner_editor/banner_editor.scss
+++ b/views/themes/banner_editor/assets/stylesheets/banner_editor/banner_editor.scss
@@ -30,6 +30,7 @@
         margin: 0 auto;
         max-width: 1200px;
         max-height: 1200px;
+        width: 800px;
         width: 100%;
     }
 
